--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,23 +4,23 @@ version = "0.1.0"
 authors = ["Geoff Cant <nem@erlang.geek.nz>", "Paul Osborne <osbpau@gmail.com>"]
 
 [dependencies.zinc]
-git = "https://github.com/Gyscos/zinc.git"
-branch = "crazy"
+git = "https://github.com/Talos208/zinc.git"
+branch = "mykbd"
 features = ["mcu_k20"]
 
 [dependencies.macro_platformtree]
-git = "https://github.com/Gyscos/zinc.git"
-branch = "crazy"
+git = "https://github.com/Talos208/zinc.git"
+branch = "mykbd"
 path = "macro_platformtree"
 
 [dependencies.ioreg]
-git = "https://github.com/Gyscos/zinc.git"
-branch = "crazy"
+git = "https://github.com/Talos208/zinc.git"
+branch = "mykbd"
 path = "ioreg"
 
 [dependencies.platformtree]
-git = "https://github.com/Gyscos/zinc.git"
-branch = "crazy"
+git = "https://github.com/Talos208/zinc.git"
+branch = "mykbd"
 path = "platformtree"
 
 [dependencies.rust-libcore]
